@@ -1,6 +1,5 @@
 buildscript {
     repositories {
-        mavenLocal()
         mavenCentral()
         maven {
             url "http://dl.bintray.com/ramonza/gradle-plugins"
@@ -9,8 +8,6 @@ buildscript {
     }
     dependencies {
         classpath "org.ajoberstar:grgit:1.3.0"
-        classpath "com.rhapsody.bi:gradle-bi-plugin:0.0.1"
-        classpath "cucumber.contrib.gradle:cucumber-gradle:0.2.0"
         classpath "com.github.maiflai:gradle-scalatest:0.12"
     }
 }
@@ -22,23 +19,22 @@ plugins {
     id "nebula.provided-base" version "3.0.3"
 }
 
-apply plugin: "cucumber"
 apply plugin: "com.github.maiflai.scalatest"
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
-def scalaMajor = "2.10"
-def scalaVersion = "2.10.4"
+def scalaMajor = "2.11"
+def scalaVersion = "2.11.8"
 
 ext {
     git = org.ajoberstar.grgit.Grgit.open(currentDir: project.projectDir)
     revision = git.head().id
     gitVersion = git.describe().replaceFirst(/^(?i)v/, "")
-    testWorkingDir = new File(buildDir, "test-tmp")
+    testWorkingDir = file("${buildDir}/test-tmp")
 }
 
-group = "com.rhapsody.bi"
+group = "com.napster.bi"
 version = gitVersion
 description = "Typesafe Config Extension"
 
@@ -51,7 +47,6 @@ jar {
 
 repositories {
     maven { url "http://maven01.internal.rhapsody.com/nexus/content/groups/public" }
-    maven { url "http://rds-repo-dev-1201.sea2.rhapsody.com:8080/nexus/content/groups/public" }
 }
 
 dependencies {
@@ -63,24 +58,6 @@ dependencies {
     testCompile "org.scalacheck:scalacheck_$scalaMajor:1.12.5"
 
     testRuntime "org.pegdown:pegdown:1.1.0"
-
-    testCompile "info.cukes:cucumber-scala_$scalaMajor:1.2.4"
-    testCompile "info.cukes:cucumber-junit:1.2.4"
-}
-
-cucumber {
-    systemProperty "mySystemProperty", "someValue"
-    jvmArgs = ["-Xmx2G", "-XX:MaxPermSize=256M"]
-
-    // The following are default the values:
-    features += project.sourceSets.test.output.resourcesDir
-    htmlReport true
-    junitReport true
-    progressOutput false
-    prettyOutput true
-
-    // monochrome defaults to use Gradle --color flag
-    monochrome false
 }
 
 test.doFirst {
@@ -93,7 +70,7 @@ test {
     workingDir testWorkingDir
 }
 
-task wrapper(type: Wrapper) { gradleVersion = "2.10" }
+task wrapper(type: Wrapper) { gradleVersion = "2.13" }
 
 task scalaDocJar(type: Jar, dependsOn: scaladoc) {
     classifier = 'scaladoc'
